--- a/week1/lab/week1/lab1.Rmd
+++ b/week1/lab/week1/lab1.Rmd
@@ -1,22 +1,9 @@
 ---
-title: "R Notebook"
-output: html_notebook
+title: "Lab-1"
+author: "Jared 'Jay' Klein"
+date: "8/30/2021"
+output: word_document
 ---
-
-This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code. 
-
-Try executing this chunk by clicking the *Run* button within the chunk or by placing your cursor inside it and pressing *Cmd+Shift+Enter*. 
-
-```{r}
-plot(cars)
-```
-
-Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Cmd+Option+I*.
-
-When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Cmd+Shift+K* to preview the HTML file). 
-
-The preview shows you a rendered HTML copy of the contents of the editor. Consequently, unlike *Knit*, *Preview* does not run any R code chunks. Instead, the output of the chunk when it was last run in the editor is displayed.
-
 1) Use and show R code to find the square root of 63,504.
 ```{r}
 sqrt(63504)
@@ -38,14 +25,6 @@ for (variable in c) {
 ```
 5) Use and show R code to find the mean of all prime numbers 3 to 17 inclusive. 
 ```{r}
-for (number in 3:17) {
-  if (number %% 2:(number-1)) {
-    print(number)
-  }
-}
-
-```
-```{r}
 # install.packages("matlab")
 library(matlab)
 
@@ -57,7 +36,7 @@ for (number in 3:17) {
 }
 
 print(c)
-print(mean_value)
+print(mean(c))
 ```
 ```{r}
 help("round")
