--- a/week1/homework/python/hw1.ipynb
+++ b/week1/homework/python/hw1.ipynb
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "e1cad685-195a-4bce-a97b-fa0029284aef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n"
    ]
   },
   {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "69297b7f-281d-4348-96fc-bd9ab6a010cc",
    "metadata": {
     "tags": []
@@ -118,13 +118,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "49.0\n"
+      "49.5\n"
      ]
     }
    ],
    "source": [
     "values = []\n",
-    "for i in range(0, 99):\n",
+    "for i in range(1, 99):\n",
     "    values.append(i)\n",
     "    \n",
     "print(np.mean(values))"
@@ -137,31 +137,6 @@
    "source": [
     "3) Write a function (using r code and structure demonstrated in class) to calculate a z score for a given observed value, a mean, and a standard deviation value. And then use your function to find a z score for the following problem. (Research the internet to find the formula used to calculate a z score)Observed value = 25.77,  mean =  23.54,  standard deviation = 2.442\n",
     "4)  Use and show R code to round your z score answer in problem 3 to the nearest tenth"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "c36b47df-e1ca-4ad0-aefa-efbfc21535fc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on built-in function round in module builtins:\n",
-      "\n",
-      "round(number, ndigits=None)\n",
-      "    Round a number to a given precision in decimal digits.\n",
-      "    \n",
-      "    The return value is an integer if ndigits is omitted or None.  Otherwise\n",
-      "    the return value has the same type as the number.  ndigits may be negative.\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "help(round)"
    ]
   },
   {
@@ -259,14 +234,6 @@
    "source": [
     "first_10_squares_odd(1, 10)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9359f448-f139-40a1-b3d3-1f8c6d3126e9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
